--- a/aulasjs.html
+++ b/aulasjs.html
@@ -6,7 +6,9 @@
     <title>Aulas JS</title>
 
 <script>
-    alert ("Ola turma");
+    var nome = prompt("Digite seu nome");
+    alert ("Olá" + nome + "!!!");
+
 </script>
 
 </head>
