--- a/aulasjs.html
+++ b/aulasjs.html
@@ -6,13 +6,18 @@
     <title>Aulas JS</title>
 
 <script>
-    var nome = prompt("Digite seu nome");
-    alert ("Olá" + nome + "!!!");
+    //var nome = prompt("Digite seu nome");
+    
+    var nome = ' Keven'; // texto -> string
+    var idade = 23; // numero -> number -> int
+    var peso = 54.9; // number -> float
+    var acordado = true; // boolean -> bool 
+    alert ("Olá"+ nome +"!!!");
 
 </script>
 
 </head>
 <body>
-    Aulas JS
+    <h1>Aulas JS</h1>
 </body>
 </html>
